--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
                                                     }
                                                 </style>
                                                 <div id="dexscreener-embed">
-                                                    <iframe src="https://dexscreener.com/bsc/0xbFFEc96e8f3b5058B1817c14E4380758Fada01EF?embed=1&loadChartSettings=0&trades=0&tabs=0&info=0&chartLeftToolbar=0&chartTheme=dark&theme=dark&chartStyle=0&chartType=usd&interval=15"></iframe>
+                                                    <iframe src="https://dexscreener.com/base/?embed=1&loadChartSettings=0&trades=0&tabs=0&info=0&chartLeftToolbar=0&chartTheme=dark&theme=dark&chartStyle=0&chartType=usd&interval=15"></iframe>
                                                 </div>
                                             </div>
                                             <section class="elementor-section elementor-inner-section elementor-element elementor-element-916be4c elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="916be4c" data-element_type="section">
@@ -988,9 +988,9 @@
                                                     <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-c91e8ed" data-id="c91e8ed" data-element_type="column">
                                                         <div class="elementor-widget-wrap elementor-element-populated">
                                                             <div class="elementor-element elementor-element-ca21fa0 elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="ca21fa0" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:300}" data-widget_type="button.default">
-                                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow-rotate" href="#" target="_blank">
+                                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow-rotate" href="https://ape.store/" target="_blank">
                                                                     <span class="elementor-button-content-wrapper">
-                                                                        <span class="elementor-button-text">BUY ON RAYDIUM</span>
+                                                                        <span class="elementor-button-text">BUY ON XXX</span>
                                                                     </span>
                                                                 </a>
                                                             </div>
@@ -999,7 +999,7 @@
                                                     <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-4e2e2a6" data-id="4e2e2a6" data-element_type="column">
                                                         <div class="elementor-widget-wrap elementor-element-populated">
                                                             <div class="elementor-element elementor-element-3f61d4f elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="3f61d4f" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:600}" data-widget_type="button.default">
-                                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-shrink" href="#" target="_blank">
+                                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-shrink" href="https://dexscreener.com/base/" target="_blank">
                                                                     <span class="elementor-button-content-wrapper">
                                                                         <span class="elementor-button-text">VIEW CHART</span>
                                                                     </span>
@@ -1032,7 +1032,7 @@
                                     <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-0221bf9" data-id="0221bf9" data-element_type="column">
                                         <div class="elementor-widget-wrap elementor-element-populated">
                                             <div class="elementor-element elementor-element-1a745bcd elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="1a745bcd" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:300}" data-widget_type="button.default">
-                                                <a class="elementor-button elementor-size-sm elementor-animation-grow-rotate" role="button">
+                                                <a class="elementor-button elementor-size-sm elementor-animation-grow-rotate" href="https://x.com/" target="_blank">
                                                     <span class="elementor-button-content-wrapper">
                                                         <span class="elementor-button-text">JOIN OUR X</span>
                                                     </span>
@@ -1043,7 +1043,7 @@
                                     <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-3234b86" data-id="3234b86" data-element_type="column">
                                         <div class="elementor-widget-wrap elementor-element-populated">
                                             <div class="elementor-element elementor-element-7a6e9bb8 elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="7a6e9bb8" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:600}" data-widget_type="button.default">
-                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-shrink" href="#" target="_blank">
+                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-shrink" href="https://t.me" target="_blank">
                                                     <span class="elementor-button-content-wrapper">
                                                         <span class="elementor-button-text">JOIN COMMUNITY</span>
                                                     </span>
