--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
                                     <div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-c0884ea" data-id="c0884ea" data-element_type="column">
                                         <div class="elementor-widget-wrap elementor-element-populated">
                                             <div class="elementor-element elementor-element-251092c9 elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="251092c9" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:200}" data-widget_type="button.default">
-                                                <a class="elementor-button elementor-size-sm elementor-animation-grow-rotate" role="button">
+                                                <a class="elementor-button elementor-size-sm elementor-animation-grow-rotate" href="https://x.com" target="_blank">
                                                     <span class="elementor-button-content-wrapper">
                                                         <span class="elementor-button-text">JOIN US ON X</span>
                                                     </span>
@@ -1267,14 +1267,14 @@
                                     <div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-0f79f7f" data-id="0f79f7f" data-element_type="column">
                                         <div class="elementor-widget-wrap elementor-element-populated">
                                             <div class="elementor-element elementor-element-33328b60 elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="33328b60" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="button.default">
-                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow-rotate" href="#" target="_blank">
+                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow-rotate" href="https://x.com" target="_blank">
                                                     <span class="elementor-button-content-wrapper">
                                                         <span class="elementor-button-text">JOIN US ON X</span>
                                                     </span>
                                                 </a>
                                             </div>
                                             <div class="elementor-element elementor-element-5053c729 elementor-widget__width-auto animated-slow elementor-invisible elementor-widget elementor-widget-button" data-id="5053c729" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="button.default">
-                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-shrink" href="#" target="_blank">
+                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-shrink" href="https://t.me/" target="_blank">
                                                     <span class="elementor-button-content-wrapper">
                                                         <span class="elementor-button-text">JOIN OUR COMMUNITY</span>
                                                     </span>
@@ -1303,7 +1303,7 @@
                     <div class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-69738d2" data-id="69738d2" data-element_type="column">
                         <div class="elementor-widget-wrap elementor-element-populated">
                             <div class="elementor-element elementor-element-86e2bc7 elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="86e2bc7" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInRight&quot;}" data-widget_type="button.default">
-                                <a class="elementor-button elementor-button-link elementor-size-sm" href="#" target="_blank">
+                                <a class="elementor-button elementor-button-link elementor-size-sm" href="https://x.com" target="_blank">
                                     <span class="elementor-button-content-wrapper">
                                         <span class="elementor-button-icon">
                                             <svg aria-hidden="true" class="e-font-icon-svg e-fab-x-twitter" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
