--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
                                     <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-d99037b" data-id="d99037b" data-element_type="column">
                                         <div class="elementor-widget-wrap elementor-element-populated">
                                             <div class="elementor-element elementor-element-44e9b66 elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="44e9b66" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInRight&quot;}" data-widget_type="button.default">
-                                                <a class="elementor-button elementor-size-sm" role="button">
+                                                <a class="elementor-button elementor-size-sm" href="https://x.com" target="_blank">
                                                     <span class="elementor-button-content-wrapper">
                                                         <span class="elementor-button-icon">
                                                             <svg aria-hidden="true" class="e-font-icon-svg e-fab-x-twitter" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
@@ -1024,7 +1024,7 @@
                                 <h2 class="elementor-heading-title elementor-size-default">$FJSAL</h2>
                             </div>
                             <div class="elementor-element elementor-element-1bf5b151 elementor-widget__width-inherit elementor-invisible elementor-widget elementor-widget-heading" data-id="1bf5b151" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:100}" data-widget_type="heading.default">
-                                <p class="elementor-heading-title elementor-size-default">You can purchase FSJAL directly on RAYDIUM, JUPITER, or any other DEX that supports SOLANA. Just use the links we've provided below to get started!</p>
+                                <p class="elementor-heading-title elementor-size-default">You can purchase FSJAL directly on UNISWAP, APESTORE or any other DEX that supports BASE. Just use the links we've provided below to get started!</p>
                             </div>
                             <section class="elementor-section elementor-inner-section elementor-element elementor-element-016f0e5 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="016f0e5" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;gradient&quot;}">
                                 <div class="elementor-background-overlay"></div>
