--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
             img:is([sizes="auto" i], [sizes^="auto," i]) {
                 contain-intrinsic-size: 3000px 1500px
             }
+            body {
+                background-color: #0066cc !important;
+                background: linear-gradient(135deg, #0066cc 0%, #003d7a 100%) !important;
+            }
         </style>
         <link rel="alternate" type="application/rss+xml" title="FSJAL &raquo; Feed" href="https://fsjal.wtf/feed/"/>
         <link rel="alternate" type="application/rss+xml" title="FSJAL &raquo; Comments Feed" href="https://fsjal.wtf/comments/feed/"/>
