--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
                                     <div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-c0884ea" data-id="c0884ea" data-element_type="column">
                                         <div class="elementor-widget-wrap elementor-element-populated">
                                             <div class="elementor-element elementor-element-251092c9 elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="251092c9" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:200}" data-widget_type="button.default">
-                                                <a class="elementor-button elementor-size-sm elementor-animation-grow-rotate" href="https://x.com" target="_blank">
+                                                <a class="elementor-button elementor-size-sm elementor-animation-grow-rotate" href="https://x.com/fjsal_" target="_blank">
                                                     <span class="elementor-button-content-wrapper">
                                                         <span class="elementor-button-text">JOIN US ON X</span>
                                                     </span>
