--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
                                     <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-3c23a464" data-id="3c23a464" data-element_type="column">
                                         <div class="elementor-widget-wrap elementor-element-populated">
                                             <div class="elementor-element elementor-element-5328849 elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="5328849" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInLeft&quot;}" data-widget_type="button.default">
-                                                <a class="elementor-button elementor-button-link elementor-size-sm" href="https://pfp.fsjal.wtf/" target="_blank">
+                                                <a class="elementor-button elementor-button-link elementor-size-sm" href="https://pfp-iota.vercel.app" target="_blank">
                                                     <span class="elementor-button-content-wrapper">
                                                         <span class="elementor-button-text">CREATE YOUR PFP</span>
                                                     </span>
