--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                                         <div class="elementor-widget-wrap elementor-element-populated">
                                             <div class="elementor-element elementor-element-4b269671 elementor-widget__width-auto elementor-widget elementor-widget-heading" data-id="4b269671" data-element_type="widget" data-widget_type="heading.default">
                                                 <h2 class="elementor-heading-title elementor-size-default">
-                                                    <a href="#buy">BUY $FSJAL</a>
+                                                    <a href="https://ape.store/base/0x2fcfe24248f70babb88e83739f4443152e814bac">BUY $FSJAL</a>
                                                 </h2>
                                             </div>
                                         </div>
@@ -992,7 +992,7 @@
                                                     <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-c91e8ed" data-id="c91e8ed" data-element_type="column">
                                                         <div class="elementor-widget-wrap elementor-element-populated">
                                                             <div class="elementor-element elementor-element-ca21fa0 elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="ca21fa0" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:300}" data-widget_type="button.default">
-                                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow-rotate" href="https://ape.store/" target="_blank">
+                                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow-rotate" href="https://ape.store/base/0x2fcfe24248f70babb88e83739f4443152e814bac" target="_blank">
                                                                     <span class="elementor-button-content-wrapper">
                                                                         <span class="elementor-button-text">BUY ON XXX</span>
                                                                     </span>
@@ -1003,7 +1003,7 @@
                                                     <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-4e2e2a6" data-id="4e2e2a6" data-element_type="column">
                                                         <div class="elementor-widget-wrap elementor-element-populated">
                                                             <div class="elementor-element elementor-element-3f61d4f elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="3f61d4f" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:600}" data-widget_type="button.default">
-                                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-shrink" href="https://dexscreener.com/base/" target="_blank">
+                                                                <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-shrink" href="https://dexscreener.com/base/0xe871326F5f0B02232573CC65b7304f2477B9ab19" target="_blank">
                                                                     <span class="elementor-button-content-wrapper">
                                                                         <span class="elementor-button-text">VIEW CHART</span>
                                                                     </span>
