--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
                                                     }
                                                 </style>
                                                 <div id="dexscreener-embed">
-                                                    <iframe src="https://dexscreener.com/base/?embed=1&loadChartSettings=0&trades=0&tabs=0&info=0&chartLeftToolbar=0&chartTheme=dark&theme=dark&chartStyle=0&chartType=usd&interval=15"></iframe>
+                                                    <iframe src="https://dexscreener.com/base/0xe871326F5f0B02232573CC65b7304f2477B9ab19?embed=1&loadChartSettings=0&trades=0&tabs=0&info=0&chartLeftToolbar=0&chartTheme=dark&theme=dark&chartStyle=0&chartType=usd&interval=15"></iframe>
                                                 </div>
                                             </div>
                                             <section class="elementor-section elementor-inner-section elementor-element elementor-element-916be4c elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="916be4c" data-element_type="section">
@@ -994,7 +994,7 @@
                                                             <div class="elementor-element elementor-element-ca21fa0 elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="ca21fa0" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:300}" data-widget_type="button.default">
                                                                 <a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow-rotate" href="https://ape.store/base/0x2fcfe24248f70babb88e83739f4443152e814bac" target="_blank">
                                                                     <span class="elementor-button-content-wrapper">
-                                                                        <span class="elementor-button-text">BUY ON XXX</span>
+                                                                        <span class="elementor-button-text">BUY ON APESTORE</span>
                                                                     </span>
                                                                 </a>
                                                             </div>
